BuildingsPy Changelog
---------------------

Version 2.0.1, July 17, 2019 -- Release 2.0
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- For unit tests, display plots before asking to add new reference results. (Issue 344)
- When writing package.order, preserved the ordering of constants from the .mo file.
- Changed doctest to Python 3.6.
- For unit tests, added support for OPTIMICA.
- For unit tests, changed to non-pedantic mode in Dymola if a model
  is in the Obsolete package.
- For unit tests, corrected problem on Windows if a user enabled DDE.
- For unit tests, corrected problem if a user saved the startup directory in Dymola.
- Avoided text replace in binary files when merging libraries, which lead to
  UnicodeDecodeError. (Issue 272)
- In regression tests, issue error if the name of the reference results
  is too long. (Issue 274)
- Added compiler option nle_solver_tol_factor with value of 1e-2 for jmodelica
  regression test. (Issue 301)

Version 2.0.0, July 15, 2019 -- Release 2.0
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Added handling of library specific comments in buildingspy.development.merger
- Improved error reporting when running regression tests in batch mode.
- Corrected bug when creating and then renaming a package with
  buildingspy.development.refactor
- Removed buildingspy.simulate.Simulator.simulate_translated
  as it relies on non-standard Dymola functionality, and does no longer
  work with Dymola 2019.
  Also removed is the function buildingspy.simulate.Simulator.deleteTranslateDirectory
  which was only needed for buildingspy.simulate.Simulator.simulate_translated

Version 1.7.0, June 14, 2018 -- Release 1.7
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Corrected error in buildingspy.development.regressiontest that caused
  variables in plot statements to be ignored if the plot statement was
  longer than one line. Now, an error message will be written for this case.
- Updated buildingspy.development.merger to filter out certain files,