@@ -1,5 +1,0 @@
-[submodule "buildingspy/funnel"]
-	path = buildingspy/funnel
-	url = https://github.com/lbl-srg/funnel.git
-	branch = master
-
