@@ -1,5 +1,5 @@
+include buildingspy/VERSION
 include buildingspy/license.txt
-recursive-include buildingspy/funnel *
 recursive-include buildingspy/thirdParty *
 recursive-include buildingspy *.txt *.rst *.mo *.template
 recursive-include buildingspy/templates *
