@@ -2,7 +2,7 @@ BPDIR=buildingspy
 BPDOC=doc
 
 PEP8_ARGS=--recursive --max-line-length=100 \
-  --exclude="*/thirdParty/*,*/funnel/*" \
+  --exclude="*/thirdParty/*" \
   --ignore="E402" \
   --aggressive --aggressive --aggressive \
   buildingspy
