@@ -2,4 +2,10 @@
 :mod:`buildingspy` Modules for post-processing simulation output files
 ======================================================================
 """
-__version__ = '2.0.0'
+
+import os
+
+# Version.
+version_path = os.path.abspath(os.path.join(os.path.dirname(__file__), 'VERSION'))
+with open(version_path) as f:
+    __version__ = f.read().strip()
